# options-implied-probability

./: .gitignore  CHANGELOG.md  DEPENDENCY_MANAGEMENT.md  LICENSE  MANIFEST.in  MIGRATION_GUIDE.md  OIPD_Demo.ipynb  QUICK_START.md  README.md  TECHNICAL_README.md  constraints.txt  debug_parity.py  debug_yf_cols.py  example.ipynb  example.py  exampleOil.py  example_new.py  main.py  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py  svi_jw_calibration_prd.md  svi_speed_fix_PRD.md  svi_surface_PRD.md  svi_surface_fix.md  svi_surface_fix_2.md  svi_theory_fix_PRD.md  test_kline.py
.github/workflows/: ci.yml  generate-golden-master-linux.yml
.yfinance_cache/: AAPL_2025-07-11.pkl  AAPL_2025-07-25.pkl  AAPL_2026-05-15.pkl
ce-docs/brainstorms/: 2026-04-25-oipd-raw-data-intake-schema-requirements.md
ce-docs/plans/: 2026-04-25-001-refactor-raw-data-intake-schema-plan.md  2026-04-25-002-refactor-remove-wide-option-input-plan.md
ce-docs/solutions/best-practices/: probability-domain-forward-parity-model-change-workflow-2026-04-17.md
ce-docs/solutions/logic-errors/: compare-drift-on-matching-grids-2026-04-17.md
data/: AAPL_data.csv  WTIfutures_date250908exp251216_spot6169.csv  bitcoin_date20250830_strike20251226_price108864.csv
docs/: .mintignore  0_index.md  1_installation.md  2_introduction.md  2_theory_overview.md  3_theory_overview.md  3_user-guide.md  4_examples.md  5_algorithm_details.md  5_api-reference.md  5_contribute.md  6_contribute.md  CNAME  _config.yml  ai-coding-tools.mdx  docs.json  examples.md  getting-started.md  index.md  index.mdx  installation.md  installation.mdx  introduction.md  introduction.mdx  quickstart.mdx  repo_structure.md  user-guide.md
docs/api-reference/: oipd-core.md  oipd-interface.md  oipd-pipelines.md
docs/concepts/: market-inputs.mdx  mental-model.mdx  probability-layer.mdx  volatility-layer.mdx
docs/getting-started/: deriving-distribution.md  fitting-smile.md  quickstart.md
docs/guides/: data-sources.mdx  probability-single-expiry.mdx  probability-surface.mdx  volatility-smile.mdx  volatility-surface.mdx  warnings-diagnostics.mdx
docs/plans/: 2026-04-16-001-fix-probability-grid-resolution-plan.md
docs/reference/: exceptions.mdx  market-inputs.mdx  prob-curve.mdx  prob-surface.mdx  sources.mdx  vol-curve.mdx  vol-surface.mdx
docs/theory/: pipeline-details.mdx
docs/theory-overview/: 01_introductory_theory_overview.md  02_advanced_theory_overview.md
docs/user-guide/: 01_quickstart_probability.md  02_workflow_direct_distribution.md  03_workflow_vol_then_distribution.md  04_data_inputs_sources.md  05_api_comparison.md  06_reference_volcurve.md  07_reference_volsurface.md  08_reference_probcurve.md  09_reference_probsurface.md  10_reference_market_sources.md  11_troubleshooting_faq.md  advanced-configs.md  data-sources.md  distribution.md  market-inputs.md  volcurve.md  volsurface.md
examples/: OIPD_colab_demo.ipynb  appl_PDF_set_exmaple.py  appl_example.py  appl_example_new_api.py  crypto_options_example.py  example.ipynb  example.py  new_api_demo.py  quickstart_VolCurve.ipynb  quickstart_VolSurface.ipynb  quickstart_yfinance.ipynb  readme_image.py  surface_example.py
oipd/: __init__.py  estimator.py  generate_pdf.py  logging.py  market_inputs.py  surface.py  warnings.py
oipd/calibration/: __init__.py  raw_svi_surface.py  ssvi_surface.py
oipd/cli/: generate_pdf.py
oipd/core/: __init__.py  density.py  errors.py  iv.py  iv_smoothing.py  maturity.py  parity.py  pdf.py  prep.py  smoothing.py  ssvi.py  surface_fitting.py  svi.py  svi_types.py  utils.py  vol_model.py
oipd/core/data_processing/: __init__.py  dividends.py  iv.py  moneyness.py  parity.py  selection.py  validation.py
oipd/core/probability_density_conversion/: __init__.py  finite_diff.py  physical.py  price_curve.py  rnd.py  surface_math.py
oipd/core/vol_surface_fitting/: __init__.py  api.py  facade.py  forward_interpolator.py  registry.py  variance_interpolator.py
oipd/data_access/: __init__.py  sources.py
oipd/data_access/readers/: __init__.py  base.py  (+2 more)
oipd/graphics/: __init__.py  iv_plotting.py  iv_surface_3d.py  matplot.py  plot_rnd.py  publication.py
oipd/interface/: __init__.py  probability.py  volatility.py  warning_diagnostics.py
oipd/io/: __init__.py  csv_reader.py  dataframe_reader.py  livedata.py  reader.py  yfinance_reader.py
oipd/pipelines/: __init__.py  estimator.py  prob_estimation.py  reconstruct.py  rnd_slice.py  rnd_surface.py  vol_curve.py
oipd/presentation/: __init__.py  iv_plotting.py  iv_surface_3d.py  matplot.py  plot_rnd.py  probability_surface_3d.py  probability_surface_plot.py  publication.py  surface_3d.py  term_structure.py
oipd/pricing/: __init__.py  black76.py  black_scholes.py  european.py  utils.py
tests/: README.md  conftest.py  constraints.txt  generate_golden_master.py  test_finite_diff.py  test_interpolated_surface.py  test_interpolator_pipeline.py  test_iv_smile.py  test_plot_args.py  test_price_method.py  test_prob_interface.py  test_prob_pipeline.py  test_rate_mode.py  test_sources.py  test_surface_warning.py  test_vol_interface.py  test_vol_pipeline.py  verify_fix.py
tests/core/: test_black76_integration.py  test_parity.py  test_prep.py  test_rnd_surface_interface.py  test_ssvi_calibration.py  test_surface_diagnostics.py  test_surface_fitting.py  test_svi.py  test_svi_calibration.py
tests/data/: compare_golden_master.py  generate_golden_master.py  golden_master.json  golden_master_linux.json
tests/data_access/: __init__.py  test_sources.py  test_yfinance_reader.py
tests/interface/: conftest.py  test_api_contract.py  test_distribution.py  test_distribution_surface.py  test_reconstruct_api.py  test_visualization.py  test_vol_curve.py  test_vol_surface.py  test_warning_diagnostics.py
tests/io/: test_csv_reader.py
tests/pipelines/: test_reconstruct.py
tests/pricing/: test_pricing.py
tests/regression/: __init__.py  test_golden_master.py
tests/unit/: test_days_to_expiry_deprecation_contract.py  test_legacy_estimator.py  test_market_inputs.py  test_maturity.py  test_utils.py
(+64 files in other folders)
