[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "oipd"
version = "0.0.6"
readme = "README.md"
authors = [
  { name="Henry Tian", email="tyrneh@gmail.com" },
  { name="Jannic Holzer", email="jannic.holzer@gmail.com" },
]
license = {text = "MIT"}
description = "Generate probability distributions on the future price of publicly traded securities using options data"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: MacOS",
    "Operating System :: POSIX :: Linux",
    "Topic :: Office/Business :: Financial :: Investment",
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Financial and Insurance Industry",
    "Intended Audience :: Science/Research",
]

# Core dependencies - only what we directly import
dependencies = [
    "numpy>=1.26.0,<2.0.0",
    "pandas>=2.1.0,<3.0.0",
    "scipy>=1.11.0,<2.0.0",
    "matplotlib>=3.8.0,<4.0.0",
    "matplotlib-label-lines>=0.6.0,<1.0.0",
    "traitlets>=5.12.0,<6.0.0",
]

[project.optional-dependencies]
# Development dependencies
dev = [
    "pytest>=7.4.0,<8.0.0",
    "pytest-cov>=4.1.0,<5.0.0",
    "mypy>=1.6.0,<2.0.0",
    "black>=23.9.0,<24.0.0",
    "isort>=5.12.0,<6.0.0",
    "flake8>=6.1.0,<7.0.0",
]

# All extras (currently only dev)
all = ["oipd[dev]"]

[project.urls]
"Homepage" = "https://github.com/tyrneh/options-implied-probability"
"Bug Tracker" = "https://github.com/tyrneh/options-implied-probability/issues"

[tool.setuptools.packages.find]
where = ["."]

[tool.black]
line-length = 88
target-version = ['py310']
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"