[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "oipd"
version = "1.0.0"
readme = "README.md"
authors = [
  { name="Henry Tian", email="tyrneh@gmail.com" },
  { name="Jannic Holzer", email="jannic.holzer@gmail.com" },
]
license = {text = "Apache License 2.0"}
description = "Generate probability distributions on the future price of publicly traded securities using options data"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Operating System :: MacOS",
    "Operating System :: POSIX :: Linux",
    "Topic :: Office/Business :: Financial :: Investment",
    "Development Status :: 4 - Beta",
    "Intended Audience :: Financial and Insurance Industry",
    "Intended Audience :: Science/Research",
]

# Default dependencies - includes data vendor integrations
dependencies = [
    "numpy>=1.26.0",
    "pandas>=2.1.0",
    "scipy>=1.11.0",
    "matplotlib>=3.8.0",
    "matplotlib-label-lines>=0.6.0",
    "traitlets>=5.12.0",
    "yfinance>=0.2.60",
]

[project.optional-dependencies]
# Minimal installation - no external data vendors (for internal/corporate use)
minimal = [
    "numpy>=1.26.0",
    "pandas>=2.1.0",
    "scipy>=1.11.0",
    "matplotlib>=3.8.0",
    "matplotlib-label-lines>=0.6.0",
    "traitlets>=5.12.0",
]

# Developer tools (formatting, linting, testing, build)
dev = [
    "black>=24.3.0",
    "isort>=5.13.0",
    "pytest>=8.0.0",
    "mypy>=1.8.0",
    "build>=1.0.0",
]



[project.urls]
"Homepage" = "https://github.com/tyrneh/options-implied-probability"
"Bug Tracker" = "https://github.com/tyrneh/options-implied-probability/issues"

[tool.setuptools.packages.find]
where = ["."]
exclude = ["tests*"]

[tool.black]
line-length = 88
target-version = ['py310']
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"