[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "oipd"
version = "2.0.4"
readme = "README.md"
authors = [
  { name="Henry Tian", email="tyrneh@gmail.com" },
  { name="Jannic Holzer", email="jannic.holzer@gmail.com" },
  { name="Chun Hei Hung", email="chunhei1848@gmail.com" },
  { name="Jaewon La", email="jaewonla0225@gmail.com" },
]
license = {text = "Apache License 2.0"}
description = "Generate probability distributions on the future price of publicly traded securities using options data"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Operating System :: MacOS",
    "Operating System :: POSIX :: Linux",
    "Topic :: Office/Business :: Financial :: Investment",
    "Development Status :: 4 - Beta",
    "Intended Audience :: Financial and Insurance Industry",
    "Intended Audience :: Science/Research",
]

# Default dependencies - includes data vendor integrations
dependencies = [
    "numpy>=2.0.0",
    "pandas>=2.2.2",
    "scipy>=1.13.0",
    "matplotlib>=3.9.0",
    "matplotlib-label-lines>=0.6.0",
    "plotly>=5,<6",
    "traitlets>=5.12.0",
    "yfinance>=0.2.60",
]

[project.optional-dependencies]
# Minimal installation - no external data vendors (for internal/corporate use)
minimal = [
    "numpy>=2.0.0",
    "pandas>=2.2.2",
    "scipy>=1.13.0",
    "matplotlib>=3.9.0",
    "matplotlib-label-lines>=0.6.0",
    "plotly>=5,<6",
    "traitlets>=5.12.0",
]

# Developer tools (formatting, linting, testing, build)
dev = [
    "black>=26.3.1",
    "isort>=5.13.0",
    "pytest>=9.0.3,<10",
    "mypy>=1.8.0",
    "build>=1.0.0",
]

# Experiment runners and YAML-based reproducibility configs
experiments = [
    "PyYAML>=6.0",
    "Pillow>=10.0.0",
    "pyarrow>=15.0.0",
    "databento>=0.55.0",
]



[project.urls]
"Homepage" = "https://github.com/Open-Lemma/options-implied-probability"
"Bug Tracker" = "https://github.com/Open-Lemma/options-implied-probability/issues"

[tool.setuptools.packages.find]
where = ["."]
exclude = ["tests*"]

[tool.black]
line-length = 88
target-version = ['py310']
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
